--- a/testthat/README
+++ b/testthat/README
@@ -2,5 +2,7 @@
 ## TESTING FRAMEWORK
 ######################################################
 
-* Unit test implemented by: Guillermo Rocamora - https://github.com/guillermo1996
+* Unit test implemented by: [Guillermo Rocamora](https://github.com/guillermo1996)
 * Library used: https://testthat.r-lib.org/
+
+######################################################
